<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/sin"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/sin" />

        <Button
            android:id="@+id/cos"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/cos" />

        <Button
            android:id="@+id/tan"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/tan" />

        <Button
            android:id="@+id/i"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/i" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/ln"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/ln" />

        <Button
            android:id="@+id/lg"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/lg" />

        <Button
            android:id="@+id/pi"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/pi" />

        <Button
            android:id="@+id/e"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/e" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/percentage"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/percentage" />

        <Button
            android:id="@+id/factorial"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/factorial" />

        <Button
            android:id="@+id/sqrt"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/sqrt" />

        <Button
            android:id="@+id/cbrt"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/cbrt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/power"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/power" />

        <Button
            android:id="@+id/leftParen"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/leftParen" />

        <Button
            android:id="@+id/rightParen"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:text="@string/rightParen" />

        <Button
            android:id="@+id/parentheses"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:background="@drawable/circle_bg"
            android:text="@string/parentheses" />
    </LinearLayout>
</LinearLayout>
